@@ -1,6 +1,6 @@
 <HTML>
 <BODY>
-Integration with Apache's Jakarta Commons HTTP Client. Provides an HTTP and HTTPS client connector with advanced 
+Integration with Apache Commons HTTP Client. Provides an HTTP and HTTPS client connector with advanced 
 multi-threading and connection reuse support. It has more dependencies that the connector based on JDK's 
 HttpUrlConnection, we should be more robust for high-volume applications.
 @since 1.0
