@@ -1,6 +1,6 @@
 <HTML>
 <BODY>
-Implementation of Containers.
+Implementation of Components.
 <p>
 @since 1.0
 @see <a href="http://www.restlet.org">Restlet project</a>
